--- a/index.html
+++ b/index.html
@@ -363,6 +363,7 @@
       font-family: 'Inter', Arial, sans-serif;
       opacity: 0.92;
       order: 99;
+      align-items: flex-start;
     }
     @media (min-width: 1101px) {
       .card {
@@ -386,13 +387,18 @@
         gap: 6px;
       }
     }
+    /* --- AJUSTE PARA BADGES DE LEYENDA (chips compactos y multilinea) --- */
     .leyenda-condiciones .badge {
-      font-size: 0.93em;
-      padding: 2px 12px 2px 6px;
+      white-space: normal !important;   /* Permite salto de línea */
+      max-width: 420px;                 /* Limita el ancho del chip */
       min-width: 0;
-      font-weight: 500;
-      box-shadow: none;
-      margin: 0;
+      padding: 6px 14px 6px 8px;
+      font-size: 0.98em;
+      line-height: 1.3;
+      box-sizing: border-box;
+      word-break: break-word;
+      align-items: flex-start;
+      justify-content: flex-start;
     }
   </style>
 </head>
@@ -457,8 +463,8 @@
 
     // --- FECHA Y RESPONSABLE DE ACTUALIZACIÓN ---
     const updateTexts = {
-      es: "Actualizado: 01-01-2025 · Merchant Risk",
-      en: "Updated: 01-01-2025 by Merchant Risk"
+      es: "Actualizado: 22-07-2025 · Merchant Risk",
+      en: "Updated: 07-22-2025 by Merchant Risk"
     };
 
     function setUpdateInfo() {
