--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <!-- Fuente Inter de Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
   <style>
-    /* --- ESTILOS GENERALES Y DE LAYOUT --- */
     body {
       font-family: 'Inter', Arial, sans-serif;
       margin: 40px;
@@ -26,7 +25,6 @@
       letter-spacing: 1px;
       margin-bottom: 28px;
     }
-    /* --- LOGO Y FECHA DE ACTUALIZACIÓN --- */
     .logo-top-right {
       position: absolute;
       top: 24px;
@@ -68,7 +66,6 @@
         margin-top: 2px;
       }
     }
-    /* --- BARRA DE BÚSQUEDA Y SELECTOR DE IDIOMA --- */
     .search-lang-row {
       display: flex;
       align-items: center;
@@ -130,7 +127,6 @@
         height: 38px;
       }
     }
-    /* --- TARJETA DE RESULTADO --- */
     .card {
       background: #fff;
       border-radius: 12px;
@@ -159,7 +155,6 @@
       min-width: 260px;
       max-width: 100%;
     }
-    /* --- COLUMNA DE CONDICIONES Y LEYENDA --- */
     .condiciones-leyenda-col {
       display: flex;
       flex-direction: column;
@@ -199,7 +194,6 @@
         border-top: 5px solid #FF007A;
       }
     }
-    /* --- ESTILOS DE TEXTOS Y SECCIONES --- */
     .mcc {
       font-family: 'Inter', Arial, sans-serif;
       font-weight: bold;
@@ -231,7 +225,6 @@
       margin-top: 22px;
       margin-bottom: 10px;
     }
-    /* --- TABLAS DE RESTRICCIONES Y MEDIOS DE PAGO --- */
     .table-responsive {
       width: 100%;
       overflow-x: auto;
@@ -272,7 +265,6 @@
       vertical-align: middle;
       font-family: 'Inter', Arial, sans-serif;
     }
-    /* --- BADGES DE ESTADO --- */
     .badge {
       display: inline-flex;
       align-items: center;
@@ -309,7 +301,6 @@
       height: 1.1em;
       vertical-align: middle;
     }
-    /* --- MENSAJES DE ESTADO --- */
     .noresult {
       color: #FF007A;
       margin-top: 24px;
@@ -330,7 +321,6 @@
       margin: 0;
       color: #222;
     }
-    /* --- SCROLLBAR PERSONALIZADO --- */
     .table-responsive::-webkit-scrollbar,
     .card::-webkit-scrollbar {
       height: 8px;
@@ -349,7 +339,6 @@
       .restric-table { min-width: 480px; font-size: 0.85em; }
       .restric-table th, .restric-table td { padding: 7px 6px; }
     }
-    /* --- LEYENDA DE CONDICIONES --- */
     .leyenda-condiciones.leyenda-outside {
       margin-top: 12px;
       margin-bottom: 0;
@@ -357,9 +346,9 @@
       margin-right: 0;
       width: 100%;
       display: flex;
-      gap: 10px;
+      gap: 6px;
       flex-wrap: wrap;
-      font-size: 0.93em;
+      font-size: 0.92em;
       font-family: 'Inter', Arial, sans-serif;
       opacity: 0.92;
       order: 99;
@@ -384,17 +373,17 @@
       .leyenda-condiciones.leyenda-outside {
         margin-top: 10px;
         font-size: 0.89em;
-        gap: 6px;
+        gap: 4px;
       }
     }
     /* --- AJUSTE PARA BADGES DE LEYENDA (chips compactos y multilinea) --- */
     .leyenda-condiciones .badge {
-      white-space: normal !important;   /* Permite salto de línea */
-      max-width: 420px;                 /* Limita el ancho del chip */
+      white-space: normal !important;
+      max-width: 260px;
       min-width: 0;
-      padding: 6px 14px 6px 8px;
-      font-size: 0.98em;
-      line-height: 1.3;
+      padding: 4px 10px 4px 7px;
+      font-size: 0.87em;
+      line-height: 1.25;
       box-sizing: border-box;
       word-break: break-word;
       align-items: flex-start;
@@ -403,7 +392,6 @@
   </style>
 </head>
 <body>
-  <!-- LOGO Y FECHA DE ACTUALIZACIÓN -->
   <div class="logo-top-right">
     <img src="PayM2.png" alt="Logo" />
     <div class="update-info" id="updateInfo"></div>
@@ -419,7 +407,6 @@
   <div id="resultados" class="loading">Cargando datos...</div>
 
   <script>
-    // --- TRADUCCIONES DE TEXTOS FIJOS ---
     const traducciones = {
       es: {
         titulo: "Catálogo de MCC PayU",
@@ -461,7 +448,6 @@
       }
     };
 
-    // --- FECHA Y RESPONSABLE DE ACTUALIZACIÓN ---
     const updateTexts = {
       es: "Actualizado: 22-07-2025 · Merchant Risk",
       en: "Updated: 07-22-2025 by Merchant Risk"
@@ -471,21 +457,20 @@
       document.getElementById('updateInfo').textContent = updateTexts[idioma] || updateTexts['es'];
     }
 
-    // --- LEYENDAS DE CONDICIONES (BADGES) ---
+    // LEYENDAS RESUMIDAS
     const leyendasCondiciones = {
       es: [
-        { tipo: "permitido", texto: "Permitido: Actividades autorizadas con requisitos generales de KYC según prevalidación." },
-        { tipo: "restric", texto: "Restringido: Actividades que requieren condiciones adicionales (licencias, aprobaciones, requisitos financieros o KYC reforzado) según el riesgo y la política GPO." },
-        { tipo: "prohib", texto: "Prohibido: Actividades no elegibles para vinculación." }
+        { tipo: "permitido", texto: "Permitido: Actividad autorizada con requisitos generales de KYC." },
+        { tipo: "restric", texto: "Restringido: Requiere condiciones adicionales (licencias, aprobaciones, KYC reforzado)." },
+        { tipo: "prohib", texto: "Prohibido: Actividad no elegible para vinculación." }
       ],
       en: [
-        { tipo: "permitido", texto: "Allowed: Activities authorized with general KYC requirements as per pre-validation." },
-        { tipo: "restric", texto: "Restricted: Activities requiring additional conditions (licenses, approvals, financial requirements, or enhanced KYC) based on risk and GPO policy." },
-        { tipo: "prohib", texto: "Prohibited: Activities not eligible for onboarding." }
+        { tipo: "permitido", texto: "Allowed: Authorized activity with general KYC requirements." },
+        { tipo: "restric", texto: "Restricted: Requires extra conditions (licenses, approvals, enhanced KYC)." },
+        { tipo: "prohib", texto: "Prohibited: Not eligible for onboarding." }
       ]
     };
 
-    // Renderiza el badge de la leyenda según tipo
     function renderLeyendaBadge(tipo, texto) {
       if (tipo === "permitido") {
         return `<span class="badge badge-permitido">
@@ -517,7 +502,6 @@
       return "";
     }
 
-    // Busca el valor de la columna, probando varios nombres posibles
     function getCol(row, ...names) {
       for (let n of names) {
         if (row[n] !== undefined && row[n] !== null) return row[n];
@@ -525,7 +509,6 @@
       return "";
     }
 
-    // Catálogo de medios de pago por país (usa label y columna)
     const paises = ["CO","BR","AR","PE","CL","MX","PA"];
     const mediosPorPais = {
       "CO": [
@@ -588,7 +571,6 @@
       ]
     };
 
-    // Estado global
     let idioma = localStorage.getItem('idiomaMCC') || "es";
     let datos = [];
     let datosCargados = false;
@@ -609,7 +591,6 @@
       return traducciones[idioma][clave] || clave;
     }
 
-    // AJUSTE: badges reconocen permitted, restricted, prohibited
     function getBadge(val, label) {
       if (!val) return '';
       const v = val.toString().toLowerCase();
@@ -707,7 +688,6 @@
         return;
       }
 
-      // Busca en ambos idiomas para cada campo
       const coincidencias = datos.filter(row =>
         (getCol(row, "MCC") && getCol(row, "MCC").toString().toLowerCase().includes(texto)) ||
         (getCol(row, "Actividad", "Activity") && getCol(row, "Actividad", "Activity").toLowerCase().includes(texto)) ||
@@ -729,7 +709,6 @@
             <div><span class="label">${t('riesgo')}:</span> ${getCol(row, "Riesgo LAyFT", "AML Risk") || ""}</div>
             <div><span class="label">${t('nivel')}:</span> ${getCol(row, "Nivel de Aprobación", "Approval Level") || ""}</div>
             <div><span class="label">${t('add')}:</span> ${getCol(row, "ADD") || ""}</div>
-            <!-- Riesgo de crédito como link -->
             <div>
               <span class="label">${t('tpv')}:</span>
               <a href="https://apps.powerapps.com/play/e/5e56a28f-6f80-ee2a-bbe1-23ca6e20ce5e/a/1391cece-c56a-4636-b380-545c764c792a?tenantId=674203d4-4c70-4e82-b36b-ec018d680a26&amp;hint=60caecef-093e-4661-b739-1a0b6f7875d6&amp;sourcetime=1747232223984&source=teamsLinkUnfurling"
