--- a/index.html
+++ b/index.html
@@ -379,11 +379,11 @@
     /* --- AJUSTE PARA BADGES DE LEYENDA (chips compactos y multilinea) --- */
     .leyenda-condiciones .badge {
       white-space: normal !important;
-      max-width: 260px;
+      max-width: 420px;   /* ← vuelve a este valor */
       min-width: 0;
-      padding: 4px 10px 4px 7px;
-      font-size: 0.87em;
-      line-height: 1.25;
+      padding: 6px 14px 6px 8px;  /* padding un poco más generoso */
+      font-size: 0.98em;          /* tamaño de letra un poco mayor */
+      line-height: 1.3;
       box-sizing: border-box;
       word-break: break-word;
       align-items: flex-start;
