--- a/index.html
+++ b/index.html
@@ -297,9 +297,13 @@
       border-color: #d6003a;
     }
     .badge svg {
-      width: 1.1em;
-      height: 1.1em;
+      width: 1.25em;
+      height: 1.25em;
+      min-width: 1.25em;
+      min-height: 1.25em;
+      display: inline-block;
       vertical-align: middle;
+      margin-right: 4px;
     }
     .noresult {
       color: #FF007A;
@@ -346,9 +350,9 @@
       margin-right: 0;
       width: 100%;
       display: flex;
-      gap: 6px;
+      gap: 10px;
       flex-wrap: wrap;
-      font-size: 0.92em;
+      font-size: 0.98em;
       font-family: 'Inter', Arial, sans-serif;
       opacity: 0.92;
       order: 99;
@@ -372,22 +376,30 @@
     @media (max-width: 1100px) {
       .leyenda-condiciones.leyenda-outside {
         margin-top: 10px;
-        font-size: 0.89em;
-        gap: 4px;
+        font-size: 0.95em;
+        gap: 6px;
       }
     }
-    /* --- AJUSTE PARA BADGES DE LEYENDA (chips compactos y multilinea) --- */
     .leyenda-condiciones .badge {
       white-space: normal !important;
-      max-width: 420px;   /* ← vuelve a este valor */
+      max-width: 420px;
       min-width: 0;
-      padding: 6px 14px 6px 8px;  /* padding un poco más generoso */
-      font-size: 0.98em;          /* tamaño de letra un poco mayor */
+      padding: 6px 14px 6px 8px;
+      font-size: 0.98em;
       line-height: 1.3;
       box-sizing: border-box;
       word-break: break-word;
       align-items: flex-start;
       justify-content: flex-start;
+    }
+    .leyenda-condiciones .badge svg {
+      width: 1.25em;
+      height: 1.25em;
+      min-width: 1.25em;
+      min-height: 1.25em;
+      display: inline-block;
+      vertical-align: middle;
+      margin-right: 4px;
     }
   </style>
 </head>
@@ -449,8 +461,8 @@
     };
 
     const updateTexts = {
-      es: "Actualizado: 01-01-2025 · Merchant Risk",
-      en: "Updated: 01-01-2025 by Merchant Risk"
+      es: "Actualizado: 22-07-2025 · Merchant Risk",
+      en: "Updated: 07-22-2025 by Merchant Risk"
     };
 
     function setUpdateInfo() {
@@ -474,7 +486,7 @@
     function renderLeyendaBadge(tipo, texto) {
       if (tipo === "permitido") {
         return `<span class="badge badge-permitido">
-          <svg viewBox="0 0 20 20" fill="currentColor" style="vertical-align:middle;width:1.1em;height:1.1em;">
+          <svg viewBox="0 0 20 20" fill="currentColor">
             <circle cx="10" cy="10" r="10" fill="#1a7f37"/>
             <path d="M6 10.5l2.5 2.5 5-5" stroke="#fff" stroke-width="2" fill="none" stroke-linecap="round"/>
           </svg>
@@ -482,17 +494,18 @@
         </span>`;
       }
       if (tipo === "restric") {
+        // Rectángulo más alto para mejor presencia visual
         return `<span class="badge badge-restringido">
-          <svg viewBox="0 0 20 20" fill="currentColor" style="vertical-align:middle;width:1.1em;height:1.1em;">
+          <svg viewBox="0 0 20 20" fill="currentColor">
             <circle cx="10" cy="10" r="10" fill="#b59a00"/>
-            <rect x="5" y="9" width="10" height="2" rx="1" fill="#fff"/>
+            <rect x="5" y="7" width="10" height="6" rx="2" fill="#fff"/>
           </svg>
           ${texto}
         </span>`;
       }
       if (tipo === "prohib") {
         return `<span class="badge badge-prohibido">
-          <svg viewBox="0 0 20 20" fill="currentColor" style="vertical-align:middle;width:1.1em;height:1.1em;">
+          <svg viewBox="0 0 20 20" fill="currentColor">
             <circle cx="10" cy="10" r="10" fill="#d6003a"/>
             <path d="M7 7l6 6M13 7l-6 6" stroke="#fff" stroke-width="2" stroke-linecap="round"/>
           </svg>
@@ -595,15 +608,24 @@
       if (!val) return '';
       const v = val.toString().toLowerCase();
       if (v.includes('permitido') || v.includes('allowed') || v.includes('permitted')) return `<span class="badge badge-permitido">
-        <svg viewBox="0 0 20 20" fill="currentColor"><circle cx="10" cy="10" r="10" fill="#1a7f37"/><path d="M6 10.5l2.5 2.5 5-5" stroke="#fff" stroke-width="2" fill="none" stroke-linecap="round"/></svg>
+        <svg viewBox="0 0 20 20" fill="currentColor">
+          <circle cx="10" cy="10" r="10" fill="#1a7f37"/>
+          <path d="M6 10.5l2.5 2.5 5-5" stroke="#fff" stroke-width="2" fill="none" stroke-linecap="round"/>
+        </svg>
         ${label}
       </span>`;
       if (v.includes('restringido') || v.includes('restricted')) return `<span class="badge badge-restringido">
-        <svg viewBox="0 0 20 20" fill="currentColor"><circle cx="10" cy="10" r="10" fill="#b59a00"/><rect x="5" y="9" width="10" height="2" rx="1" fill="#fff"/></svg>
+        <svg viewBox="0 0 20 20" fill="currentColor">
+          <circle cx="10" cy="10" r="10" fill="#b59a00"/>
+          <rect x="5" y="7" width="10" height="6" rx="2" fill="#fff"/>
+        </svg>
         ${label}
       </span>`;
       if (v.includes('prohibido') || v.includes('prohibited')) return `<span class="badge badge-prohibido">
-        <svg viewBox="0 0 20 20" fill="currentColor"><circle cx="10" cy="10" r="10" fill="#d6003a"/><path d="M7 7l6 6M13 7l-6 6" stroke="#fff" stroke-width="2" stroke-linecap="round"/></svg>
+        <svg viewBox="0 0 20 20" fill="currentColor">
+          <circle cx="10" cy="10" r="10" fill="#d6003a"/>
+          <path d="M7 7l6 6M13 7l-6 6" stroke="#fff" stroke-width="2" stroke-linecap="round"/>
+        </svg>
         ${label}
       </span>`;
       return '';
@@ -613,15 +635,24 @@
       if (!val) return '';
       const v = val.toString().toLowerCase();
       if (v.includes('permitido') || v.includes('allowed') || v.includes('permitted')) return `<span class="badge badge-permitido">
-        <svg viewBox="0 0 20 20" fill="currentColor"><circle cx="10" cy="10" r="10" fill="#1a7f37"/><path d="M6 10.5l2.5 2.5 5-5" stroke="#fff" stroke-width="2" fill="none" stroke-linecap="round"/></svg>
+        <svg viewBox="0 0 20 20" fill="currentColor">
+          <circle cx="10" cy="10" r="10" fill="#1a7f37"/>
+          <path d="M6 10.5l2.5 2.5 5-5" stroke="#fff" stroke-width="2" fill="none" stroke-linecap="round"/>
+        </svg>
         ${t('permitido')}
       </span>`;
       if (v.includes('restringido') || v.includes('restricted')) return `<span class="badge badge-restringido">
-        <svg viewBox="0 0 20 20" fill="currentColor"><circle cx="10" cy="10" r="10" fill="#b59a00"/><rect x="5" y="9" width="10" height="2" rx="1" fill="#fff"/></svg>
+        <svg viewBox="0 0 20 20" fill="currentColor">
+          <circle cx="10" cy="10" r="10" fill="#b59a00"/>
+          <rect x="5" y="7" width="10" height="6" rx="2" fill="#fff"/>
+        </svg>
         ${t('restringido')}
       </span>`;
       if (v.includes('prohibido') || v.includes('prohibited')) return `<span class="badge badge-prohibido">
-        <svg viewBox="0 0 20 20" fill="currentColor"><circle cx="10" cy="10" r="10" fill="#d6003a"/><path d="M7 7l6 6M13 7l-6 6" stroke="#fff" stroke-width="2" stroke-linecap="round"/></svg>
+        <svg viewBox="0 0 20 20" fill="currentColor">
+          <circle cx="10" cy="10" r="10" fill="#d6003a"/>
+          <path d="M7 7l6 6M13 7l-6 6" stroke="#fff" stroke-width="2" stroke-linecap="round"/>
+        </svg>
         ${t('prohibido')}
       </span>`;
       return '';
