--- a/index.html
+++ b/index.html
@@ -384,8 +384,8 @@
       white-space: normal !important;
       max-width: 420px;
       min-width: 0;
-      padding: 6px 14px 6px 8px;
-      font-size: 0.98em;
+      padding: 4px 10px 4px 8px;  /* padding más pequeño, opcional */
+      font-size: 0.8em;
       line-height: 1.3;
       box-sizing: border-box;
       word-break: break-word;
