--- a/index.html
+++ b/index.html
@@ -391,6 +391,7 @@
       word-break: break-word;
       align-items: flex-start;
       justify-content: flex-start;
+      text-align: left;
     }
     .leyenda-condiciones .badge svg {
       width: 1.25em;
