--- a/index.html
+++ b/index.html
@@ -462,8 +462,8 @@
     };
 
     const updateTexts = {
-      es: "Actualizado: Jul-2025 · Merchant Risk",
-      en: "Updated: Jul-2025 by Merchant Risk"
+      es: "Actualizado: 29-Jul-2025 · Merchant Risk",
+      en: "Updated: 29-Jul-2025 by Merchant Risk"
     };
 
     function setUpdateInfo() {
